# esp_iot

./: CMakeLists.txt  readme.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  main.cc
main/env/: env.hpp
main/html/: wificonfigurationhtml.h
main/includes/: httpclient.hpp  httpserver.hpp  httpurihandlers.hpp  otahandler.hpp  sensorscheduler.hpp  softapwificonfiguration.hpp  stawifimode.hpp  storagenvshandler.hpp
main/sensors/bme680/: esp8266_wrapper.c
main/src/: httpclient.cc  httpserver.cc  otahandler.cc  sensorscheduler.cc  softapwificonfiguration.cc  stawifimode.cc  storagenvshandler.cc
main/utils/: util.hpp
main/utils/internetutils/: internetutils.cc  internetutils.hpp
main/utils/uri/: uritokenstructures.hpp  uriutility.cc  uriutility.hpp
